Add sonarqube and fix some code smells